--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
     border: 1px solid rgb(0, 247, 255);
     margin: auto;
     overflow: hidden;
-    background-color: rgb(0, 247, 255); /* Set your desired background color here */
+    background-color: rgb(0, 247, 255);
+    position: relative;
 }
-
 
 #block {
     width: 50px;
@@ -20,6 +20,7 @@
     position: relative;
     left: 1000px;
     animation: block 2s infinite linear;
+    z-index: 2; /* Zorg ervoor dat dit element achter het gat komt */
 }
 
 @keyframes block {
@@ -31,6 +32,15 @@
     }
 }
 
+.cloud {
+    width: 150px;
+    height: 50px;
+    background-color: #fff;
+    position: absolute;
+    border-radius: 50%;
+    z-index: 3; /* Zorg ervoor dat de clouds achter het character komen */
+}
+
 #hole {
     width: 50px;
     height: 150px;
@@ -39,7 +49,9 @@
     left: 400px;
     top: -500px;
     animation: block 2s infinite linear;
+    z-index: 3; /* Zorg ervoor dat dit element voor het block komt */
 }
+
 
 #character {
     width: 20px;
@@ -48,5 +60,16 @@
     position: absolute;
     top: 100px;
     border-radius: 50%;
-    
+    z-index: 4; /* Zorg ervoor dat dit element voor de cloud en hole komt */
+}
+
+#score {
+    position: absolute;
+    bottom: 10px; /* Gepositioneerd onderaan de game-container */
+    left: 50%; /* Gecentreerd horizontaal */
+    transform: translateX(-50%); /* Aangepast om horizontaal te centreren */
+    font-size: 24px;
+    color: black;
+    font-family: Arial, sans-serif;
+    z-index: 5; /* Zorg ervoor dat de score bovenaan alle andere elementen wordt weergegeven */
 }
